add api detail akun
